--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>6trillion Todolist</title>
+    <title>운남동 똥쟁이 이상훈</title>
   </head>
   <body>
     <div id="root"></div>
