--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta property="og:title" content="이상훈" />
+    <meta property="og:description" content="운남동 쌉게이" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>운남동 똥쟁이 이상훈</title>
   </head>
